adjust margin on mobile to stop horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -283,8 +283,7 @@ a.work-shot{
 
 	a.work-shot{
 		width: 100%;
-		margin-top: 0px;
-		margin-bottom: 10px;
+		margin: 0px 0px 10px 0px;
 	}
 
 	.work-shot img{
